# 24D-sim

./: .gitignore  README.md
src/as2_qr_mission/: package.xml  setup.cfg  setup.py
src/as2_qr_mission/as2_qr_mission/: laser_node.py  localization_tf_node.py  mission_node.py  qr_detector_node.py  qr_mission_node.py
src/as2_qr_mission/config/: qr_as2_config.yaml  qr_as2_world.yaml  qr_world.sdf  simulation_config.json
src/as2_qr_mission/launch/: full_demo.launch.py
src/as2_qr_mission/models/simple_drone/: model.sdf
src/as2_qr_mission/worlds/: simple_inline.sdf
src/qr_whiteboard_portable/: README.md  generate_geometry_qr_board.py  package.xml  setup.py
src/qr_whiteboard_portable/hook/: gz_resource_paths.dsv
src/qr_whiteboard_portable/models/qr_whiteboard/: model.config  model.sdf
src/qr_whiteboard_portable/models/qr_whiteboard/materials/scripts/: qr_board.material
src/qr_whiteboard_portable/models/qr_whiteboard/materials/textures/: qr_board.json
src/qr_whiteboard_portable/models/qr_whiteboard/meshes/: qr_plane.dae
src/qr_whiteboard_portable/worlds/: qr_whiteboard_model_only.sdf  qr_whiteboard_model_only.world
